# formatFlick-engine

./: .gitignore  LICENSE  Pipfile  README.md  log  main.py  pyproject.toml  requirements.txt  result.json  result.tsv  setup.py
.github/workflows/: E2E_Flow.yaml  python-publish.yml  test-pypi.yml  unittest.yaml  unittest.yml
examples/: examples.py
formatflick/: __init__.py  flick.py  formatflick.py  global_var.py  input_handler.py
formatflick/engine/: Logger_Config.py  cEngine.py  csv_handler.py  file_handler.py  jEngine.py  json_handler.py  xEngine.py
formatflick/engine/converter/: core.py
formatflick/engine/handler/: destination.py  source.py  util.py
formatflick/tests/: test_formatflick.py  test_util.py
profiler/: profiler.py  randomcsv.py  randomjson.py  randomstring.py
profiler/random_files/: randomcsv.csv  randomresult.json
src/: __init__.py
src/formatflick/: __init__.py  flick.py  formatflick.py  logger.py  typeflick.py
src/formatflick/engine/: Logger_Config.py  cEngine.py  engine.py  global_var.py  jEngine.py  xEngine.py
src/formatflick/engine/converter/: core.py  utils.py
src/formatflick/engine/converter/text_engine/: csv_engine.py  html_engine.py  json_engine.py  xlsx_engine.py
src/formatflick/engine/handler/: destination.py  source.py  util.py
src/tests/: test_formatflick.py
src/tests/sample_files/: samplecsv.csv  samplejson.json
tests/: samplejson.json  test_formatflick.py  test_util.py
tests/sample_files/: invalid_samplehtml.html  invalid_samplejson.json  invalid_samplexml.xml  resultcsv.csv  resultjson.json  resulttsv.tsv  sample.csv  sample.json  sample.tsv  sample.xlsx  sample.xml  sampletsv.tsv  samplexlsx.xlsx  samplexml.xml
tests/test_engine/: test_cEngine.py  test_jEngine.py  test_xEngine.py
