[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formatflick"
description = "Python module for interchanging file formats"
authors = [{name="Abhinaba Chakraborty",email="abhinabacr4@gmail.com"}]
maintainers = [
  {name = "Abhinaba Chakraborty", email = "brett@example.com"}
]
readme = "README.md"
license = {file="BSD 3-clause"}
dynamic = ["version"]
#version = "1.0.0"
dependencies = [
  "pandas"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]
requires-python = ">=3.6"
keywords = ["json", "csv", "xml", "format", "python3"]
