[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "formatflick"
description = "Python module for interchanging file formats"
authors = [{name="Abhinaba Chakraborty",email="abhinabacr4@gmail.com"}]
maintainers = [
  {name = "Abhinaba Chakraborty", email = "abhinabacr4@gmail.com"}
]
readme = "README.md"
license = {file="LICENSE"}
#dynamic = ["version"]
version = "0.0.2"
dependencies = [
  "pandas","dynamic-versioning"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]
requires-python = ">=3.11"
keywords = ["json", "csv", "xml", "format", "python3"]

[tool.flit.module]
name = "formatflick"
