[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "formatflick"
dependencies = [
    "pandas >= 2.1.4",
    "lxml >= 5.1.0",
    "dask >= 2024.1.0"
]
requires-python=">=3.9"
version="0.1.7"
authors = [{name = "Abhinaba Chakraborty", email = "abhinabacr4@gmail.com"}]
maintainers = [{name="Abhinaba Chakraborty", email ="abhinabacr4@gmail.com"}]
description = "formatflick: change your file formats as you wish"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python","file","extension","json","xml","csv","pandas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.11"
]
[project.urls]
Homepage = "https://github.com/cohitherewer/formatflick-engine"
Repository = "https://github.com/cohitherewer/formatflick-engine"
Issues = "https://github.com/cohitherewer/formatflick-engine/issues"
